Initial full project import

--- a/UniCoreLinux/configs/plists/example.plist
+++ b/UniCoreLinux/configs/plists/example.plist
@@ -1,1 +1,13 @@
-<plist></plist>
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<plist version="1.0">
+<dict>
+    <key>com.unicore.example</key>
+    <dict>
+        <key>WelcomeMessage</key>
+        <string>Welcome to UniCoreLinux</string>
+        <key>AutoUpdate</key>
+        <true/>
+    </dict>
+</dict>
+</plist>
